--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,16 @@
 #DB Configuration
 
 server.port = 9090
-spring.datasource.url=jdbc:mysql://localhost:3306/demoDb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:sqlserver://localhost:3306;databaseName=demoDb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.defer-datasource-initialization = true
 #hibernate configuration
 spring.jpa.hibernate.ddl.auto=update
 spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.show-sql=true
 
 #File Configuration
