IEIMS_DEV_FS_NAZRAN_MINTO database add

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
-
-
-#DB Configuration
-
-server.port = 9090
-spring.datasource.url=jdbc:sqlserver://localhost:3306;databaseName=demoDb?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.defer-datasource-initialization = true
-#hibernate configuration
-spring.jpa.hibernate.ddl.auto=update
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.show-sql=true
-
-#File Configuration
-spring.servlet.multipart.max-file-size = 3MB
-spring.servlet.multipart.max-request-size = 3MB
-ftpFileUploadPath = /G/Upload
+#
+#
+##DB Configuration
+#
+#server.port = 9090
+#spring.datasource.url=jdbc:sqlserver://localhost:3306;databaseName=demoDb?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.defer-datasource-initialization = true
+##hibernate configuration
+#spring.jpa.hibernate.ddl.auto=update
+#spring.jpa.generate-ddl=true
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
+#spring.jpa.show-sql=true
+#
+##File Configuration
+#spring.servlet.multipart.max-file-size = 3MB
+#spring.servlet.multipart.max-request-size = 3MB
+#ftpFileUploadPath = /G/Upload
