--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,10 +17,10 @@ spring:
 
   # Database Configuration
   datasource:
-    url: jdbc:sqlserver://192.168.1.20:1433;databaseName=IEIMS_DEV_FS_NAZRAN_MINTO
-    username: ieims_dev
-    password: "Ie!mSd(v21"
-    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+    url: jdbc:mysql://localhost:3306/Student
+    username: root
+    password: "SsT@6753"
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
     # Hikari Configuration
     hikari:
@@ -36,7 +36,7 @@ spring:
     # Properties
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.SQLServer2012Dialect
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         naming:
           implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
           physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
