--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,10 +14,86 @@ spring:
   jackson:
     date-format: yyyy-MM-dd
     time-zone: IST
+  profiles:
+    active: stage
+  # Servlet Configuration
+  servlet:
+    multipart:
+      enabled: true
+      location: /tmp
+      max-file-size: 512MB
+      max-request-size: 512MB
+      resolve-lazily: false
 
-  # Database Configuration
+# Management Configuration
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+---
+spring:
+  config:
+    activate:
+      on-profile: default
+  # default Database Configuration
   datasource:
     url: jdbc:mysql://localhost:3306/Student
+    username: root
+    password: "SsT@6753"
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+
+#  datasource:
+#    url: jdbc:sqlserver://192.168.1.20:1433;databaseName=IEIMS_DEV_FS_NAZRAN_MINTO
+#    username: ieims_dev
+#    password: "Ie!mSd(v21"
+#    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+    # Hikari Configuration
+    hikari:
+      minimum-idle: 1
+      maximum-pool-size: 15
+      idle-timeout: 30000
+      pool-name: SpringBootJPAHikariCP
+      max-lifetime: 2000000
+      connection-timeout: 30000
+
+  # JPA Configuration
+  jpa:
+    # Properties
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        naming:
+          implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+          physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+        show_sql: true
+        format_sql: true
+        use_sql: true
+        shutdown_on_session_factory_close: false
+        connection:
+          characterEncoding: utf-8
+          CharSet: utf-8
+          useUnicode: true
+          legacy_limit_handler: true
+
+    # Hibernate
+    hibernate:
+      ddl-auto: update
+      naming:
+        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+---
+spring:
+  config:
+    activate:
+      on-profile: stage
+  # default Database Configuration
+  datasource:
+    url: jdbc:mysql://localhost:3306/Student-STG
     username: root
     password: "SsT@6753"
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -57,18 +133,5 @@ spring:
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-  # Servlet Configuration
-  servlet:
-    multipart:
-      enabled: true
-      location: /tmp
-      max-file-size: 512MB
-      max-request-size: 512MB
-      resolve-lazily: false
 
-# Management Configuration
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
+
